# serial-device-plugin

./: .editorconfig  .gitignore  README.md  go.mod  go.sum
cmd/kernel/: main.go
common/pkg/ctrl/: ioctl.go  mod.go  request.go
docs/: prototype.drawio
kernel/: .gitignore  Makefile  README.md
kernel/cxx/: .gitignore  CMakeLists.txt  Kbuild  Makefile  virt_serial.c  virt_serial.h
kernel/pkg/cbinding/: builder.go  ioctl.go  type.go
kernel/src/: virt_serial.c  virt_serial.h
lib/ioctl/: const.go  syscall.go
